--- a/src/templates/backend/base.html
+++ b/src/templates/backend/base.html
@@ -79,5 +79,6 @@
 
 <script type="text/javascript" src="{% static '/js/chunk-vendors.js' %}"></script>
 <script type="text/javascript" src="{% static '/js/app.js' %}"></script>
+<script type="text/javascript" src="{% static 'js/components/product/CreateProduct.js' %}"></script>
 </body>
 </html>
